7-install-istio-with-terraform/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    monitoring: prometheus
    istio-injection: enabled
