7-install-istio-with-terraform/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-deployment
  labels:
    name: node-app-deployment
    app: node-app
  # namespace: development
spec:
  replicas: 2
  selector:
    matchLabels:
      name: node-app-pod
      app: node-app
  template:
    metadata:
      name: node-app-pod
      labels:
        name: node-app-pod
        app: node-app
    spec:
      containers:
        - name: node-app-api-image
          image: cooervo/kube-node:amdv1.0 # add my personal docker hub but can be stored in GCP Artifact Registry 
          ports:
            - containerPort: 5500
          #  resources:
          #    limits:
          #      cpu: "1"
          #      memory: "512Mi"
          #    requests:
          #      cpu: "500m"
          #      memory: "256Mi"
