7-install-istio-with-terraform/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  labels:
    name: node-app-service
    app: node-app
  # namespace: development
spec:
  type: ClusterIP
  selector:
    name: node-app-pod
    app: node-app
  ports:
    - name: http
      port: 80 # this Service port (to receive connections externally)
      targetPort: 3300 # the Pod port (to send connections to)
