7-install-istio-with-terraform/kubernetes/virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: second-app
  namespace: production
spec:
  hosts:
    - app.testmosaic.com
    - second-app
  gateways:
    - api
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: second-app
            subset: v1
